--- a/style.css
+++ b/style.css
@@ -3361,7 +3361,7 @@ p > video {
 		-webkit-flex-wrap: wrap;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		padding: 0 4.5455% 3.5em;
+		padding: 0 4.5455%;
 	}
 
 	.site-footer .social-navigation {
